✨ 전체 테스트 코드 및 AI API 관련 코드 삭제 수정 #27